# MARE

./: .gitignore  DEVELOPER_GUIDE.md  MANIFEST.in  PUBLISHING.md  README.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.1.md  RELEASE_NOTES_0.4.2.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: advanced_stack.py  agent_workflow.py  developer_playground.ipynb  eval_cases.json  manual_116441_eval_cases.json  mcp_stdio_config.json  research_paper_eval_cases.json
src/mare/: __init__.py  api.py  ask.py  demo.py  engine.py  eval.py  extensions.py  fusion.py  highlight.py  ingest.py  integrations.py  mcp_server.py  objects.py  router.py  streamlit_app.py  types.py  ui.py  workflow.py
src/mare/retrievers/: image.py  text.py
tests/: test_api.py  test_ask.py  test_engine.py  test_eval.py  test_extensibility.py  test_highlight.py  test_ingest.py  test_integrations.py  test_mcp_server.py  test_objects.py  test_streamlit_app.py  test_ui.py  test_workflow.py
