[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "mare-retrieval"
version = "0.2.0"
description = "Modality-Aware Retrieval Engine inspired by IRPAPERS-style multimodal retrieval."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Saisandeep Kantareddy" }
]
keywords = ["retrieval", "rag", "pdf", "document-ai", "multimodal"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing"
]
dependencies = ["pypdf>=4.0", "pypdfium2>=4.30.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
publish = ["build>=1.2.0", "twine>=5.0.0"]
ui = ["streamlit>=1.12,<2.0", "altair<5"]

[project.scripts]
mare-demo = "mare.demo:main"
mare-ingest = "mare.ingest:main"
mare-ask = "mare.ask:main"
mare-ui = "mare.streamlit_app:main"

[project.urls]
Homepage = "https://github.com/SaiSandeepKantareddy/MARE"
Repository = "https://github.com/SaiSandeepKantareddy/MARE"
Issues = "https://github.com/SaiSandeepKantareddy/MARE/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
