[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "mare-retrieval"
version = "0.3.0"
description = "Evidence-first PDF retrieval library for developers and agents that returns the best page, exact snippet, highlight, and visual proof."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Saisandeep Kantareddy" }
]
keywords = ["retrieval", "rag", "pdf", "document-ai", "evidence", "search"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing"
]
dependencies = ["pypdf>=4.0", "pypdfium2>=4.30.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
publish = ["build>=1.2.0", "twine>=5.0.0"]
ui = ["streamlit>=1.12,<2.0", "altair<5"]
docling = ["docling>=2.70.0; python_version >= '3.10'"]
faiss = ["faiss-cpu>=1.8.0"]
langchain = ["langchain-core>=0.3.0"]
langgraph = ["langchain-core>=0.3.0", "langgraph>=0.3.0"]
llamaindex = ["llama-index-core>=0.12.0"]
mcp = ["mcp>=1.0.0"]
paddleocr = ["paddleocr>=3.3.0"]
sentence-transformers = ["sentence-transformers>=3.0.0"]
surya = ["surya-ocr>=0.17.0", "pillow>=10.0.0"]
fastembed = ["fastembed>=0.7.0"]
unstructured = ["unstructured[pdf]>=0.16.0"]
integrations = [
  "faiss-cpu>=1.8.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.3.0",
  "llama-index-core>=0.12.0",
  "paddleocr>=3.3.0",
  "sentence-transformers>=3.0.0",
  "surya-ocr>=0.17.0",
  "pillow>=10.0.0",
  "fastembed>=0.7.0",
  "qdrant-client[fastembed]>=1.14.1",
  "unstructured[pdf]>=0.16.0",
  "docling>=2.70.0; python_version >= '3.10'",
]

[project.scripts]
mare-demo = "mare.demo:main"
mare-eval = "mare.eval:main"
mare-ingest = "mare.ingest:main"
mare-ask = "mare.ask:main"
mare-ui = "mare.streamlit_app:main"
mare-mcp = "mare.mcp_server:main"

[project.urls]
Homepage = "https://github.com/SaiSandeepKantareddy/MARE"
Repository = "https://github.com/SaiSandeepKantareddy/MARE"
Issues = "https://github.com/SaiSandeepKantareddy/MARE/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
